[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "cnv_from_bam"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Science/Research",
]
dynamic = ["version"]
readme = "README.md"
authors = [
  { name = "Adoni5", email = "roryjmunro1@gmail.com" },
]
license = "MPL2"


[project.urls]
Documentation = "https://github.com/adoni5/cnv_from_bam#readme"
Issues = "https://github.com/adoni5/cnv_from_bam/issues"
Source = "https://github.com/adoni5/cnv_from_bam"

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "pytest-benchmark[histogram]"
]

[tool.pytest.ini_options]
addopts = ["-ra", "--doctest-modules"]
doctest_optionflags = "ELLIPSIS"


[tool.maturin]
features = ["pyo3/extension-module"]
